Add missing stopwatch reset in runner. Add Day2 solution

--- a/src/AdventOfCode/appsettings.json
+++ b/src/AdventOfCode/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"AocSettings": {
-		"UseExampleData": true,
+		"UseExampleData": false,
 		"RunAllDays": true,
 		"YearToRun": 2018,
 		"DaysToRun": [
