Change runner and display to omit data based on settings

--- a/src/AdventOfCode/appsettings.json
+++ b/src/AdventOfCode/appsettings.json
@@ -1,8 +1,8 @@
 {
 	"AocSettings": {
-		"UseExampleData": false,
-		"RunAllDays": true,
 		"YearToRun": 2018,
+		"UseExampleData": true,
+		"RunAllDays": true,
 		"DaysToRun": [
 			"Day01"
 		],
