Add Command Line Interface using Spectre

--- a/src/AdventOfCode/appsettings.json
+++ b/src/AdventOfCode/appsettings.json
@@ -2,7 +2,7 @@
 	"AocSettings": {
 		"YearToRun": 2018,
 		"UseExampleData": true,
-		"RunAllDays": true,
+		"RunAllDays": false,
 		"DaysToRun": [
 			"Day01"
 		],
