Added functionality for AddDayCommand, made design changes

--- a/src/AdventOfCode/appsettings.json
+++ b/src/AdventOfCode/appsettings.json
@@ -1,12 +1,15 @@
 {
 	"AocSettings": {
-		"YearToRun": 2018,
+		"YearToRun": 2023,
 		"UseExampleData": true,
 		"RunAllDays": false,
 		"DaysToRun": [
-			"Day01"
+			1,
+			2
 		],
 		"RunPartOne": true,
-		"RunPartTwo": true
+		"RunPartTwo": true,
+		"SolutionFolderPath": "Solution",
+		"DataFolderPath": "Data"
 	}
 }
