Add InputCommand for fetching input data

--- a/src/AdventOfCode/appsettings.json
+++ b/src/AdventOfCode/appsettings.json
@@ -1,5 +1,6 @@
 {
 	"AocSettings": {
+		"PersonalToken": "<DO_NOT_COMMIT_ME>",
 		"YearToRun": 2023,
 		"UseExampleData": true,
 		"RunAllDays": false,
